Install MySQL for running tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ perl:
 sudo: false
 before_install:
   - eval $(curl https://travis-perl.github.io/init) --auto
+install:
+  - cpanm --quiet --installdeps --notest .
+  - apt install mysql-server
+  - cpanm --quiet DBD::mysql
