We need a test database.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ perl:
 sudo: false
 before_install:
   - eval $(curl https://travis-perl.github.io/init) --auto
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
 install:
   - cpanm --quiet --installdeps --notest .
   - cpanm --quiet --notest DBD::mysql
 services:
   - mysql
 env:
-  - MOGTEST_DBHOST=127.0.0.1 MOGTEST_DBUSER=root MOGTEST_DBPASS= MOGTEST_DBNAME=mysql
+  - MOGTEST_DBHOST=127.0.0.1 MOGTEST_DBUSER=root MOGTEST_DBPASS= MOGTEST_DBNAME=test
