Kwalitee fixes on metadata.

--- a/dist.ini
+++ b/dist.ini
@@ -11,10 +11,12 @@ homepage = https://github.com/davel/MogileFS-Plugin-FileRefs
 [InstallGuide]
 [CPANFile]
 [VersionFromModule]
+[MetaJSON]
 
 [Prereqs]
 MogileFS::Store = 0
 MogileFS::Worker::Query = 0
+perl = 5.10.1
 
 [Prereqs / TestRequires]
 Test::More = 0
