--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ perl:
   - "5.10"
   - "5.20"
   - "5.30"
+  - "dev"
 sudo: false
 before_install:
   - eval $(curl https://travis-perl.github.io/init) --auto
